# lang2pick_vla

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build_container.yml
docker/: Dockerfile
docs/: Pre-Commit.md
ros2_ws/so101_bringup/: CMakeLists.txt  package.xml
ros2_ws/so101_bringup/launch/: robot.launch.py
ros2_ws/so101_control/: CMakeLists.txt  package.xml  so101_hardware_interface.xml
ros2_ws/so101_control/config/: so101.ros2_control.xacro  so101.urdf.xacro  so101.yaml
ros2_ws/so101_control/driver/: INST.h  SCS.cpp  SCS.h  SCSCL.cpp  SCSCL.h  SCSerial.cpp  SCSerial.h  SCServo.h  SMS_STS.cpp  SMS_STS.h
ros2_ws/so101_control/include/so101_control/: so101_hardware_interface.hpp
ros2_ws/so101_control/launch/: interface.launch.py
ros2_ws/so101_control/src/: so101_hardware_interface.cpp
ros2_ws/so101_description/: CMakeLists.txt  package.xml
ros2_ws/so101_description/config/: so101.rviz
ros2_ws/so101_description/launch/: view_description.launch.py
ros2_ws/so101_description/urdf/: so101.urdf.xacro  so101_description.urdf.xacro
ros2_ws/so101_motion/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/so101_motion/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so101_robot.ros2_control.xacro  so101_robot.srdf  so101_robot.urdf.xacro  trajectory_execution.yaml
ros2_ws/so101_motion/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
ros2_ws/so101_planner/: CMakeLists.txt  package.xml
ros2_ws/so101_planner/config/: so101_planner.yaml
ros2_ws/so101_planner/include/so101_planner/: so101_planner.hpp
ros2_ws/so101_planner/launch/: so101_planner.launch.py
ros2_ws/so101_planner/src/: so101_planner.cpp
ros2_ws/so101_planner/srv/: PickPlace.srv
vla/data/: Dataset.md  urls.csv
vla/notebooks/: ReadMe.md  demo.ipynb  yolotest.ipynb
vla/src/vision-pipeline/: Dockerfile.runpod  grpc_client.py  grpc_server.py  local_inference.py  requirements-api.txt  requirements-runpod.txt  rest_api_server.py  run_pipeline.py  runpod_handler.py  webrtc_client.py
vla/src/vision-pipeline/common/: messages.py
vla/src/vision-pipeline/fundationpose_service/: main.py
vla/src/vision-pipeline/result_aggregator/: main.py
vla/src/vision-pipeline/shared_memory_ring/: ring.py
vla/src/vision-pipeline/webrtc_ingress/: main.py
vla/src/vision-pipeline/yolo_world_service/: main.py
vla/src/web-app/: README.md
vla/src/web-app/front-end/: .env.example  README.md  rest_api_server.py
vla/src/web-app/front-end/app/: globals.css  layout.tsx  page.tsx
vla/src/web-app/front-end/app/api/detection/prompt/: route.ts
vla/src/web-app/front-end/app/api/robot/joints/: route.ts
vla/src/web-app/front-end/app/api/status/: route.ts
vla/src/web-app/front-end/app/api/tasks/: route.ts
vla/src/web-app/front-end/app/api/tasks/[taskId]/: route.ts
vla/src/web-app/front-end/components/: prompt-control-new.tsx  prompt-control.tsx  robot-arm-new.tsx  robot-arm.tsx
vla/src/web-app/front-end/hooks/: use-robot-state.ts  use-task-queue.ts  use-webrtc.ts
vla/tools/: generate_proto.sh
