<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_description</name>
  <version>0.0.0</version>
  <description>so101_robot_description</description>
  <maintainer email="shrujanus@gmail.com">shrujanus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
